# bibcat

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  configuration.html  genindex.html  index.html  installation.html  llm.html  objects.inv  pretrained.html  py-modindex.html  pyproject.toml  quick_start.html  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
_modules/: index.html
_modules/bibcat/core/: base.html  config.html  grammar.html  keyword.html  operator.html  paper.html  performance.html
_modules/bibcat/core/classifiers/: textdata.html
_modules/bibcat/data/: build_dataset.html  partition_dataset.html  streamline_dataset.html
_modules/bibcat/llm/: evaluate.html  io.html  metrics.html  openai.html  plots.html  stats.html
_modules/bibcat/pretrained/: fetch_papers.html  operate_classifier.html
_modules/bibcat/tests/: conftest.html
_modules/bibcat/tests/core/: test_base.html  test_config.html  test_grammar.html  test_keyword.html  test_operator.html  test_paper.html
_modules/bibcat/tests/data/: test_build_dataset.html  test_dataset.html
_modules/bibcat/utils/: logger_config.html  utils.html
_sources/: index.rst.txt  pretrained.rst.txt  quick_start.rst.txt
_sources/api/: bibcat.core.classifiers.rst.txt  bibcat.core.rst.txt  bibcat.pretrained.rst.txt  bibcat.tests.core.rst.txt  bibcat.tests.rst.txt  bibcat.utils.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: bibcat.core.classifiers.html  bibcat.core.html  bibcat.data.html  bibcat.html  bibcat.llm.html  bibcat.pretrained.html  bibcat.tests.core.html  bibcat.tests.data.html  bibcat.tests.html  bibcat.utils.html  modules.html
bibcat/: __init__.py  base.py  build_model.py  classes.py  classfier.py  classifier_ml.py  classifier_rules.py  classify_papers.py  config.py  create_model.py  evaluate_basic_performance.py  fetch_papers.py  grammar.py  keyword.py  main.py  model_settings.py  operate_classifier.py  operate_classifiers.py  operator.py  paper.py  parameters.py  performance.py  version.py
bibcat/core/: __init__.py  base.py  classfier.py  classifier_ml.py  classifier_rules.py  config.py  fetch_keyword_object.py  grammar.py  keyword.py  operator.py  paper.py  parameters.py  performance.py
bibcat/core/classifiers/: __init__.py  ml.py  rules.py  textdata.py
bibcat/data/: README.rst  __init__.py  build_dataset.py  fake_class_data.json  load_source_dataset.py  partition_dataset.py  split_dataset.py  streamline_dataset.py
bibcat/data/operational_data/: fakedata.json  fakedata.txt
bibcat/etc/: bibcat_config.yaml  default_agent_prompt.txt  default_user_prompt.txt  default_user_prompt_v1.txt  fakedata.json
bibcat/llm/: LLM.md  README.md  __init__.py  chunker.py  evaluate.py  io.py  metrics.py  openai.py  plots.py  stats.py
bibcat/pretrained/: PRETRAINED.md  __init__.py  build_model.py  classify_papers.py  evaluate_basic_performance.py  fetch_papers.py  operate_classifier.py
bibcat/stats/: stats_llm.py
bibcat/tests/: bibcat_tests.py  conftest.py  test_bibcat.py  test_cli.py
bibcat/tests/core/: test_base.py  test_check_truematch.py  test_config.py  test_grammar.py  test_keyword.py  test_ml.py  test_operator.py  test_paper.py  test_paper_check_truematch.py
bibcat/tests/data/: test_build_dataset.py  test_dataset.py
bibcat/tests/llm/: test_chunker.py  test_eval.py  test_io.py  test_metrics.py  test_openai.py  test_stats.py  test_stats_llm.py
bibcat/tests/test_core/: test_base.py  test_grammar.py  test_keyword.py  test_operator.py  test_paper.py
bibcat/tests/test_data/: test_dataset.py
bibcat/utils/: logger_config.py  run_bibcat_parallel.sh  run_bibcat_serial.sh  utils.py
docs/: Makefile  bibcat_config.py  bibcat_constants.py  bibcat_notebook_datasets.ipynb  bibcat_tutorial_performance.ipynb  bibcat_tutorial_trainML.ipynb  bibcat_tutorial_workflow.ipynb  cli.rst  conf.py  configuration.rst  data_readme.rst  index.rst  installation.rst  llm.md  llm.rst  pretrained.md  quick_start.rst
docs/api/: bibcat.data.rst  bibcat.llm.rst  bibcat.rst  bibcat.tests.data.rst  modules.rst
envs/: bibcat_py310.yml
licenses/: LICENSE.rst
main/: bibcat_classes.py
src/: bibcat_classes.py  bibcat_config.py  bibcat_constants.py  bibcat_parameters.py  bibcat_tests.py  bibcat_text.py
src/config/: keywords_ambig.txt  phrases_ambig.txt
