[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=6.2",
  "wheel",

]
build-backend = "setuptools.build_meta"

[project]
name = "bibcat"
description = "Bibcat classifies astronomical journal papers into multiple paper categories."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }

authors = [
  { name = "Jamila Pegues", email = "jamila.pegues@stsci.edu" },
  { name = "Jinmi Yoon", email = "jyoon@stsci.edu"},
  { name = "Brian Cherinka", email = "bcherinka@stsci.edu"},
]

dependencies = [
  "click >= 8.1.0",
  "spacy >= 3.7.2 ",
  "nltk >= 3.8.1 ",
  "tensorflow >=2.15.0",
  "tensorflow-text >=2.15.0",
  "deepmerge >=1.1.1",
]
dynamic = ["version"]

[project.scripts]
bibcat = "bibcat.main:cli"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "ruff",
    "pylint",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# See https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "I", "PL", "C901", "RUF010"]
ignore = ["PLR"]  # pylint refactor



[project.urls]
repository = "https://github.com/spacetelescope/bibcat"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]

write_to = "bibcat/_version.py"



[tool.pytest.ini_options]
testpaths = [
  "bibcat",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "bibcat/__init*",
 "bibcat/conftest.py",
 "bibcat/*setup_package*",
 "bibcat/tests/*",
 "bibcat/*/tests/*",
 "bibcat/extern/*",
 "bibcat/version*",
 "*/bibcat/__init*",
 "*/bibcat/conftest.py",
 "*/bibcat/*setup_package*",
 "*/bibcat/tests/*",
 "*/bibcat/*/tests/*",
 "*/bibcat/extern/*",
 "*/bibcat/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
